[gd_scene load_steps=9 format=3 uid="uid://d18rg4qm5qksl"]

[ext_resource type="Script" uid="uid://yd0sgn1bgol6" path="res://Scripts/UI/StartMenu.gd" id="1_4yj2n"]
[ext_resource type="FontFile" uid="uid://donfw1xb4wbfa" path="res://Assets/Fonts/Jersey10-Regular.ttf" id="2_bvkpb"]
[ext_resource type="PackedScene" uid="uid://beg65mxmwr3sa" path="res://Scenes/UI/SettingsMenu.tscn" id="3_omsb3"]
[ext_resource type="PackedScene" uid="uid://dr4hyxplgk1i3" path="res://Scenes/UI/CustomizationMenu.tscn" id="4_jeo11"]
[ext_resource type="AudioStream" uid="uid://bb84ffwrccu2h" path="res://Assets/Tracks/SpeedLight.mp3" id="4_k44vq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bvkpb"]

[sub_resource type="LabelSettings" id="LabelSettings_mhyu8"]
font = ExtResource("2_bvkpb")
font_size = 64

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhyu8"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4yj2n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpSeparator" type="HSeparator" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_bvkpb")

[node name="TitleLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Run game"
label_settings = SubResource("LabelSettings_mhyu8")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvkpb")
theme_override_font_sizes/font_size = 24
text = "Lancer la partie"
flat = true

[node name="CustomButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvkpb")
theme_override_font_sizes/font_size = 24
text = "Personnalisation
"
flat = true

[node name="SettingsButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvkpb")
theme_override_font_sizes/font_size = 24
text = "Param√®tres"
flat = true

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bvkpb")
theme_override_font_sizes/font_size = 24
text = "Quitter"
flat = true

[node name="DownSeparator" type="HSeparator" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_mhyu8")

[node name="SettingsMenu" parent="." instance=ExtResource("3_omsb3")]
visible = false
layout_mode = 1

[node name="CustomizationMenu" parent="." instance=ExtResource("4_jeo11")]
visible = false
layout_mode = 1

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k44vq")
volume_db = -10.0
pitch_scale = 0.8
autoplay = true
bus = &"Music"
